FIX: Make label for search invisible

--- a/less/custom.less
+++ b/less/custom.less
@@ -179,3 +179,7 @@ ul.manager.thumbnails {
 		}
 	}
 }
+
+.element-invisible {
+	display:none;
+}
